# pyworkflow

./: .dockerignore  .gitignore  CLAUDE.md  DISTRIBUTED.md  README.md  pyproject.toml
devops/: Dockerfile  docker-compose.yml
examples/: README.md
examples/functional/: basic_workflow.py  distributed_example.py  simple_example.py  simple_no_sleep.py
pyworkflow/: __init__.py  testing.py
pyworkflow/celery/: __init__.py  app.py  tasks.py
pyworkflow/core/: context.py  exceptions.py  registry.py  step.py  workflow.py
pyworkflow/engine/: events.py  executor.py  replay.py
pyworkflow/observability/: __init__.py  logging.py
pyworkflow/primitives/: __init__.py  sleep.py
pyworkflow/serialization/: decoder.py  encoder.py
pyworkflow/storage/: base.py  file.py  schemas.py
pyworkflow/utils/: duration.py
tests/unit/: conftest.py  test_executor.py  test_registry.py  test_replay.py  test_step.py  test_workflow.py
