[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyworkflow"
version = "0.1.0"
description = "A Python implementation of durable, event-sourced workflows inspired by Vercel Workflow"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "PyWorkflow Contributors"}
]
keywords = ["workflow", "durable", "event-sourcing", "celery", "async", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: Celery",
]

dependencies = [
    # Core dependencies
    "celery[redis]>=5.3.0,<6.0.0",
    "cloudpickle>=3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "loguru>=0.7.0",

    # Storage backends
    "redis>=5.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",

    # Utilities
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-celery>=0.0.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",

    # Type stubs
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.8.0",
]

postgres = [
    "asyncpg>=0.29.0",
]

redis = [
    "redis>=5.0.0",
]

sqlite = [
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyworkflow"
Documentation = "https://github.com/yourusername/pyworkflow/blob/main/README.md"
Repository = "https://github.com/yourusername/pyworkflow"
Issues = "https://github.com/yourusername/pyworkflow/issues"

[project.scripts]
pyworkflow = "pyworkflow.cli:main"

[tool.setuptools]
packages = ["pyworkflow"]

[tool.setuptools.package-data]
pyworkflow = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["pyworkflow"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "asyncpg.*",
    "aiosqlite.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pyworkflow"]
